@@ -1,4 +1,5 @@
 v0.5.7 - ??
+  - module shaders slightly upgraded, added test_shader_examples.py
   - fix some parts of a HexMap not rendering - #201 , #202
   - tilemaps, added persistence of cell color / opacity from / to .xml files - #200
   - fix cells in tilemap forgot color / opacity when out of view - #199
